--- a/wasm/package.json
+++ b/wasm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zig-mdx",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Blazing fast MDX parser powered by Zig and WebAssembly",
   "type": "module",
   "main": "./dist/index.js",
@@ -11,13 +11,15 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "default": "./dist/index.js"
-    }
+    },
+    "./mdx.wasm": "./dist/mdx.wasm"
   },
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "bun run build.ts",
     "test": "bun test",
